syntax = "proto3";

package proto;

option go_package = "github.com/turtacn/SQLTraceBench/pkg/proto";

service SQLTraceBenchPlugin {
    rpc GetName(Empty) returns (NameResponse);
    rpc TranslateQuery(TranslateQueryRequest) returns (TranslateQueryResponse);
    rpc ConvertSchema(ConvertSchemaRequest) returns (ConvertSchemaResponse);
    rpc GetBenchmarkExecutor(Empty) returns (Empty);
    rpc ExecuteQuery(ExecuteQueryRequest) returns (ExecuteQueryResponse);
}

message Empty {}

message NameResponse {
    string name = 1;
}

message TranslateQueryRequest {
    string sql = 1;
}

message TranslateQueryResponse {
    string translated_sql = 1;
    string error = 2;
}

message ConvertSchemaRequest {
    string schema = 1;
}

message ConvertSchemaResponse {
    string converted_schema = 1;
    string error = 2;
}

message ExecuteQueryRequest {
    string sql = 1;
    repeated string args = 2;
}

message ExecuteQueryResponse {
    int64 duration_micros = 1;
    string error = 2;
}
